--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -17,6 +17,7 @@ body {
   height: 100%;
 }
 
+
 button.base-button {
   background: #2EA663;
   color: white;
@@ -63,6 +64,18 @@ button.blue {
   background-color: #2D69FF;
   color: white;
   font-weight: bold;
+}
+
+button.green {
+  background-color: #2EA663;
+  color: white;
+  font-weight: bold;
+}
+
+button.large-button {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 
