super admin UI for accept and reject of adi licence uploads

--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -83,3 +83,4 @@ button.large-button {
 @import './message-container.scss';
 @import './white-modal-box.scss';
 @import './header.scss';
+@import './modal-box.scss';
