--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -16,7 +16,7 @@
     input {
       width: 500px;
       // border: 1px solid rgb(170,170,170);
-      // height: 63px;,;
+      height: 63px;
     }
 
     button {
