--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,7 +2,8 @@
   background: white;
   height: 60px;
   width: 100%;
-  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .05);
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .1);
+  position: relative;
 
   .container {
     @media screen and (max-width: 991px) {
