--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -17,6 +17,15 @@ body {
   height: 100%;
 }
 
+input {
+  // width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid rgb(200,200,200);
+  padding-left: 20px;
+  margin: 0;
+}
+
 button.base-button {
   background: #2EA663;
   color: white;
