basic visuals for coverage

--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 body {
   margin: 0;
   padding: 0;
@@ -18,7 +20,6 @@ body {
 }
 
 input {
-  // width: 200px;
   height: 40px;
   border-radius: 5px;
   border: 1px solid rgb(200,200,200);
