--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,6 +5,36 @@
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .1);
   position: relative;
 
+  &.inst-app {
+    .header__inner {
+      max-width: 1100px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0;
+      margin: 0 auto;
+      height: 60px;
+
+      @media screen and (max-width: 1200px) {
+        width: 100%;
+        padding-left: 50px;
+        padding-right: 50px;
+      }
+
+      h3.logo {
+        font-size: 20px;
+        color: $primary-color;
+        font-weight: bold;
+        padding: 0;
+        margin: 0;
+      }
+
+      .fa-cog {
+        font-size: 22px;
+      }
+    }
+  }
+
   .container {
     @media screen and (max-width: 991px) {
       width: 100%;
@@ -28,3 +58,4 @@
     }
   }
 }
+
