update profile pick for V2 UI, update coverages for V2 UI

--- a/src/components/InstAppProfile/children/AdiLicenceUpload/adi-licence-upload.scss
+++ b/src/components/InstAppProfile/children/AdiLicenceUpload/adi-licence-upload.scss
@@ -90,7 +90,7 @@
 button.close-button {
   background: #EF7676;
   border: none;
-  border-radius: 5px;
+  // border-radius: 5px;
   margin-left: 20px;
   margin-top: 20px;
   padding: 5px;
