--- a/src/scss/close-button.scss
+++ b/src/scss/close-button.scss
@@ -1,7 +1,7 @@
 button.close-button {
   background: #EF7676;
   border: none;
-  border-radius: 5px;
+  // border-radius: 5px;
   padding: 5px;
   font-size: 30px;
   line-height: 0;
