--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -5,6 +5,14 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+
+  &.grey-background {
+    background: #F0F5F8;    
+  }
+
+  &.white-background {
+    background: #FFF;
+  }
 }
 
 *, *:before, *:after
@@ -19,20 +27,12 @@ body {
   height: 100%;
 }
 
-input {
+input, textarea {
   height: 40px;
   border-radius: 5px;
   border: 1px solid rgb(200,200,200);
   padding-left: 20px;
   margin: 0;
-}
-
-button.base-button {
-  background: #2EA663;
-  color: white;
-  border-radius: 5px;
-  padding: 7px 10px 7px 10px;
-  border: none;
 }
 
 li.special {
@@ -42,60 +42,12 @@ li.special {
   padding: 7px 10px 7px 10px;
 }
 
-button.form {
-  width: 100%;
-  background: #2EA663;
-  border: none;
-  color: white;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  border-radius: 5px;
-  font-size: 20px;
-}
 
-button.warning {
-  background: #F0AD4E;
-  color: white;
-  font-size: 16px;
-  padding: 10px 18px 10px 20px;
-  border: none;
-  border-radius: 5px;
-}
-
-button.small {
-  padding: 5px 13px 5px 13px;
-  font-size: 14px;
-  border: none;
-  border-radius: 5px;
-}
-
-button.blue {
-  background-color: #2D69FF;
-  color: white;
-  font-weight: bold;
-}
-
-button.green {
-  background-color: #2EA663;
-  color: white;
-  font-weight: bold;
-}
-
-button.large-button {
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-button.padded-button {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-
+@import './buttons.scss';
 @import './form.scss';
 @import './message-container.scss';
 @import './white-modal-box.scss';
 @import './header.scss';
 @import './modal-box.scss';
+@import './add-coverage-box.scss';
 @import './close-button.scss';
