--- a/src/components/patterns/logged-out-header/logged-out-header.scss
+++ b/src/components/patterns/logged-out-header/logged-out-header.scss
@@ -1,5 +1,5 @@
 .logged-out-header {
-  background: #F8F8F9;
+  background: white;
   height: 60px;
   width: 100%;
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .05);
