instructor induction for hourly rate in progress

--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -57,3 +57,10 @@ button.padded-button {
   padding-left: 30px;
   padding-right: 30px;
 }
+
+button.padded-small {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
