finished stages of intro

--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -11,6 +11,10 @@ button.secondary {
   background: $secondary-color;
 }
 
+button.cancel {
+  background: $cancel-color;
+}
+
 button.form {
   width: 100%;
   background: #2EA663;
