--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -47,6 +47,15 @@ span.faint-text {
   opacity: 47%;
 }
 
+.pic-back {
+  background: black;
+  opacity: 0.3;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+
 
 @import './buttons.scss';
 @import './form.scss';
