cancel invite UI, resend invite UI

--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -5,6 +5,10 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #2c3e50;
 
   &.grey-background {
     background: #F0F5F8;    
