--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -64,6 +64,13 @@ span.underline {
   text-decoration: underline;
 }
 
+.absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
 @import './buttons.scss';
 @import './form.scss';
 @import './message-container.scss';
