--- a/src/components/Profile/instructor-portal.scss
+++ b/src/components/Profile/instructor-portal.scss
@@ -2,8 +2,16 @@
   display: flex;
   flex-direction: row;
 
+  @media screen and (max-width: 650px) {
+    flex-direction: column;
+  }
+
   .instructor-portal__left-side, .instructor-portal__right-side {
     width: 50%;
+
+    @media screen and (max-width: 650px) {
+      width: 100%;
+    }
   }
 
   .spacer {
