--- a/src/components/Reviews/scss/rating-bar.scss
+++ b/src/components/Reviews/scss/rating-bar.scss
@@ -4,8 +4,16 @@
   background: rgba(0,0,0, 0.1);
   margin-right: 20px;
 
+  @media screen and (max-width: 650px) {
+    height: 10px;
+  }
+
   .rating-fill {
     background: rgb(145, 206, 168);
     height: 15px;
+
+    @media screen and (max-width: 650px) {
+      height: 10px;    
+    }
   }
 }
