--- a/src/components/patterns/InstAppHeader/header.scss
+++ b/src/components/patterns/InstAppHeader/header.scss
@@ -24,6 +24,10 @@
       margin-right: 35px;
       list-style: none;
       font-size: 16px;
+
+      @media screen and (max-width: 650px) {
+        margin-right: 15px;
+      }
     }
   }
 }
