--- a/src/scss/add-coverage-box.scss
+++ b/src/scss/add-coverage-box.scss
@@ -1,3 +1,15 @@
+.add-coverage-box-container {
+  @media screen and (max-width: 700px) {
+    width: 45%;
+  }
+
+  &.insert-mode {
+    @media screen and (max-width: 650px) {
+      width: 100%;
+    }
+  }
+}
+
 .add-coverage-box {
   background: white;
   width: 176px;
@@ -10,6 +22,12 @@
   color: #6F6F6F;
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.05);
   cursor: pointer;
+
+  @media screen and (max-width: 650px) {
+    height: 50px;
+    font-size: 14px;
+    width: 100%;
+  }
 
   .spacer {
     width: 15px;
