--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -37,6 +37,11 @@ input, textarea {
   border: 1px solid rgb(200,200,200);
   padding-left: 20px;
   margin: 0;
+
+  @media screen and (max-width: 650px) {
+    height: 35px;
+    padding-left: 10px;
+  }
 }
 
 li.special {
@@ -69,6 +74,10 @@ span.underline {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+
+.form-group {
+  margin-bottom: 10px;
 }
 
 @import './buttons.scss';
