--- a/src/scss/white-modal-box.scss
+++ b/src/scss/white-modal-box.scss
@@ -14,6 +14,12 @@
     align-items: center;
     font-size: 20px;
 
+    @media screen and (max-width: 650px) {
+      padding: 12px 20px 12px 20px;
+      font-size: 16px;
+      font-weight: 100;
+    }
+
     p {
       margin: 0;
       padding: 0;
@@ -24,12 +30,6 @@
     }
   }
 
-  .close-button__container {
-    // padding: 10px 0 10px 10px;
-  }
-
-
-
   .modal-box__body {
     padding: 15px;
     padding-top: 25px;
@@ -37,6 +37,13 @@
     margin-bottom: 20px;
     font-size: 17px;
     line-height: 30px;
+
+    @media screen and (max-width: 650px) {
+      font-size: 14px;
+      line-height: 25px;
+      padding-left: 20px;
+      padding-top: 15px;
+    }
 
     .modal-box__button-container {
       display: flex;
