--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,14 +1,11 @@
 .login-page {
   display: flex;
   width: 100%;
-  height: 100%;
-  min-height: calc(100vh - 60px);
-  transform: translateY(-7vh);
+  height: calc(100vh - 100px);
   align-items: center;
   justify-content: center;
 
   .login-container {
     width: 100%;
   }
-
 }
