--- a/src/components/SignUp/sign-up.scss
+++ b/src/components/SignUp/sign-up.scss
@@ -2,3 +2,14 @@ h1 {
   margin-top: 50px;
 }
 
+.signup-container {
+  height: calc(100vh - 100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .my-form {
+    width: 100%;
+  }
+}
