--- a/src/components/patterns/logged-out-header/logged-out-header.scss
+++ b/src/components/patterns/logged-out-header/logged-out-header.scss
@@ -5,8 +5,6 @@
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .05);
 
   .container {
-    // border: 1px solid green;
-
     @media screen and (max-width: 991px) {
       width: 100%;
       max-width: 100%;
@@ -21,11 +19,73 @@
     justify-content: flex-end;
     align-items: center;
     height: 60px;
+    border: 1px solid sandybrown;
 
     li {
-      margin-right: 35px;
+      margin-right: 15px;
       list-style: none;
       font-size: 16px;
+    }
+  }
+}
+
+.header.logged-out {
+  .header__inner {
+    @media screen and (max-width: 800px) {
+      padding-right: 0;
+      padding-left: 30px;
+    }
+
+    ul.logged-out-header__nav {
+      height: 60px;
+      margin: 0;
+
+      @media screen and (max-width: 750px) {
+        display: none;
+      }
+
+      li {
+        cursor: pointer;
+        padding: 10px 10px 10px 10px;
+        margin-right: 15px;
+      }
+    }
+
+    /**
+     * mobile 
+     */
+    .fa-bars, .fa-times {
+      padding-right: 30px;
+      font-size: 30px;
+      color:#2C3E50;
+      display: none;
+      cursor: pointer;
+
+      @media screen and (max-width: 750px) {
+        display: block;
+      }
+    }
+  }
+}
+
+ul.logged-out-header__mobile-nav {
+  background: white;
+  text-align: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .05);
+  width: 100%;
+  display: none;
+
+  li {
+    border-bottom: 1px solid #E2E2E2;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    cursor: pointer;
+
+    &:hover {
+      background: #EAEEF4;
     }
   }
 }
