--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -63,6 +63,10 @@ span.faint-text {
   z-index: 2;
   width: 100%;
   height: 100%;
+
+  @media screen and (max-width: 650px) {
+    // width: 80%;
+  }
 }
 
 span.underline {
